--- a/GrooveSharkWindowsPhone/UserControls/UCSongMinimized.xaml
+++ b/GrooveSharkWindowsPhone/UserControls/UCSongMinimized.xaml
@@ -9,7 +9,25 @@
     d:DesignHeight="30"
     d:DesignWidth="400">
 
-    <StackPanel Orientation="Horizontal" Height="30" Holding="OnHolding" Background="#00000000">
+    <StackPanel x:Name="SongStackPanel" Orientation="Horizontal" Height="30" Background="#00000000" Holding="OnHolding" PointerPressed="StartPress" PointerReleased="StopPress" PointerExited="StopPress" PointerCanceled="StopPress" PointerCaptureLost="StopPress">
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="CommonStates">
+                <VisualStateGroup.Transitions>
+                    <VisualTransition From="Pressed" To="Normal">
+                        <Storyboard>
+                            <PointerUpThemeAnimation Storyboard.TargetName="SongStackPanel"/>
+                        </Storyboard>
+                    </VisualTransition>
+                    <VisualTransition GeneratedDuration="0" To="Pressed"/>
+                </VisualStateGroup.Transitions>
+                <VisualState x:Name="Normal"/>
+                <VisualState x:Name="Pressed">
+                    <Storyboard>
+                        <PointerDownThemeAnimation Storyboard.TargetName="SongStackPanel"/>
+                    </Storyboard>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
         <FlyoutBase.AttachedFlyout>
             <MenuFlyout>
                 <MenuFlyoutItem Text="Play now" />
