--- a/GrooveSharkWindowsPhone/Views/RegisterView.xaml
+++ b/GrooveSharkWindowsPhone/Views/RegisterView.xaml
@@ -1,11 +1,10 @@
-﻿<views:BaseView
-    x:Class="GrooveSharkWindowsPhone.Views.LoginView"
+﻿<local:BaseView
+    x:Class="GrooveSharkWindowsPhone.Views.RegisterView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:GrooveSharkWindowsPhone.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:views="using:GrooveSharkWindowsPhone.Views"
-    xmlns:userControls="using:GrooveSharkWindowsPhone.UserControls"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -28,9 +27,12 @@
         </StackPanel>
 
 
-        <Grid Grid.Row="0" Grid.RowSpan="2" x:Name="ContentRoot" Margin="19,9.5,19,0">
+        <Grid Grid.Row="1"  x:Name="ContentRoot" Margin="19,9.5,19,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -41,10 +43,13 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
-            <TextBox Text="{Binding UserName, Mode=TwoWay}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding UserNameLabel}" HorizontalAlignment="Stretch"></TextBox>
-            <PasswordBox IsPasswordRevealButtonEnabled="True" Password="{Binding Password, Mode=TwoWay}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding PasswordLabel}" HorizontalAlignment="Stretch"></PasswordBox>
-            <Button Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Command="{Binding LoginCommand}">Login</Button>
+            <TextBox Text="{Binding Email, Mode=TwoWay}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding EmailLabel}" HorizontalAlignment="Stretch"></TextBox>
+            <TextBox Text="{Binding FirstName, Mode=TwoWay}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding FirstNameLabel}" HorizontalAlignment="Stretch"></TextBox>
+            <TextBox Text="{Binding LastName, Mode=TwoWay}" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding LastNameLabel}" HorizontalAlignment="Stretch"></TextBox>
+            <TextBox Text="{Binding UserName, Mode=TwoWay}" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding UserNameLabel}" HorizontalAlignment="Stretch"></TextBox>
+            <PasswordBox IsPasswordRevealButtonEnabled="True" Password="{Binding Password, Mode=TwoWay}" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" PlaceholderText="{Binding PasswordLabel}" HorizontalAlignment="Stretch"></PasswordBox>
+
+            <Button Grid.Row="6" Grid.Column="1" HorizontalAlignment="Stretch" Command="{Binding RegisterCommand}">Register</Button>
         </Grid>
     </Grid>
-    
-</views:BaseView>
+</local:BaseView>
