--- a/GrooveSharkWindowsPhone/UserControls/UCSong.xaml
+++ b/GrooveSharkWindowsPhone/UserControls/UCSong.xaml
@@ -30,8 +30,9 @@
         </VisualStateManager.VisualStateGroups>
         <FlyoutBase.AttachedFlyout>
             <MenuFlyout>
-                <MenuFlyoutItem Text="Play now" />
+                <MenuFlyoutItem Text="Play now" Command="{Binding PlayNowCommand}" />
                 <MenuFlyoutItem Text="Play next" Command="{Binding PlayNextCommand}" />
+                <MenuFlyoutItem Text="Play Last" Command="{Binding PlayLastCommand}" />
                 <MenuFlyoutItem x:Name="AddToFavouritesFlyoutItem" Text="Add to favourites" Command="{Binding AddSongToUserFavouritesCommand}" />
                 <MenuFlyoutItem x:Name="RemoveFromFavouritesFlyoutItem" Text="Remove from favourites" Command="{Binding RemoveSongFromUserFavouritesCommand}" />
                 <MenuFlyoutItem Text="Add to playlist" Command="{Binding AddToPlaylistCommand}"></MenuFlyoutItem>
